--- a/app/src/main/res/layout/fans_card.xml
+++ b/app/src/main/res/layout/fans_card.xml
@@ -1,6 +1,5 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/featured_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -52,7 +51,8 @@
             android:focusableInTouchMode="false"
             android:baselineAligned="true"
             android:weightSum="3"
-            android:layout_gravity="top">
+            android:layout_gravity="top"
+            android:layout_marginTop="10dp">
 
             <TextView
                 android:layout_width="0dp"
@@ -71,14 +71,17 @@
                 android:layout_weight="1"
                 android:textAlignment="gravity"
                 android:layout_gravity="center_vertical"
-                android:gravity="center_vertical|center_horizontal" />
+                android:gravity="center_vertical|center_horizontal"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp" />
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="@string/follow_text"
                 android:id="@+id/fans_follow_button"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@color/md_light_green_500" />
         </LinearLayout>
 
     </LinearLayout>
