--- a/app/src/main/res/layout/activity_twitter_login.xml
+++ b/app/src/main/res/layout/activity_twitter_login.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.simplysortedsoftware.epicfollow.TwitterLoginActivity"
+    tools:context="com.simplysortedsoftware.epicfollow_android.TwitterLoginActivity"
     android:orientation="vertical">
 
     <include android:id="@+id/app_bar" layout="@layout/toolbar"></include>
