--- a/app/src/main/res/layout/fragment_twitter_users_panel.xml
+++ b/app/src/main/res/layout/fragment_twitter_users_panel.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.simplysortedsoftware.epicfollow.twitter.TwitterFeatured"
+    tools:context="com.simplysortedsoftware.epicfollow_android.twitter.TwitterFeatured"
     android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout
