--- a/app/src/main/res/menu/menu_twitter.xml
+++ b/app/src/main/res/menu/menu_twitter.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.simplysortedsoftware.epicfollow.TwitterActivity">
+    tools:context="com.simplysortedsoftware.epicfollow_android.TwitterActivity">
 
 </menu>
