--- a/app/src/main/res/layout/activity_twitter.xml
+++ b/app/src/main/res/layout/activity_twitter.xml
@@ -13,8 +13,8 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabMode="scrollable"
-        app:tabGravity="center"
+        app:tabMode="fixed"
+        app:tabGravity="fill"
         />
 
     <android.support.v4.view.ViewPager
